# izi-math

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  constants.js  index.d.ts  index.js  package.json  test.js
src/: math.c
